objects/Payment_Term__c/Payment_Term__c.object-meta.xml
<CustomObject>
    <label>Payment Term</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>