objects/Payment_Term__c/fields/D365_EQAI__c.field-meta.xml
<CustomField>
    <fullName>D365_EQAI__c</fullName>
    <description>Shows the corresponding D365 Payment Term</description>
    <label>D365 EQAI</label>
    <length>20</length>
    <type>Text</type>
</CustomField>