objects/Payment_Term__c/fields/Discount_Date_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Discount_Date_Calculation__c</fullName>
    <label>Discount Date Calculation</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>