objects/Payment_Term__c/fields/Discount_Pct__c.field-meta.xml
<CustomField>
    <fullName>Discount_Pct__c</fullName>
    <label>Discount %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>