objects/Payment_Term__c/fields/Due_Date_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Calculation__c</fullName>
    <label>Due Date Calculation</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>