objects/Payment_Term__c/fields/EQAI_Terms_Code__c.field-meta.xml
<CustomField>
    <fullName>EQAI_Terms_Code__c</fullName>
    <label>EQAI Terms Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>