objects/Payment_Term__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Due_Date_Calculation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>